Opening a certain scene crashes Blender 3.4.0 nightly #101309

Closed
opened 2022-09-23 19:53:03 +02:00 by kursad k · 6 comments
Member

System Information
Operating system: Win11
Graphics card: RTX 3080

Blender Version
Broken: e9344d329f
Works: 3.3.0

Short description of error
I have a scene that seems to crash Blender 3.4.0 during opening. I can't provide the scene because it is a production asset however I was able to capture the crash log. This scene crashes Blender every time I open it with the latest nightly. The current release has no issue opening it.

The crash log

v004_2700_autosave.crash.txt

**System Information** Operating system: Win11 Graphics card: RTX 3080 **Blender Version** Broken: e9344d329ffa Works: 3.3.0 **Short description of error** I have a scene that seems to crash Blender 3.4.0 during opening. I can't provide the scene because it is a production asset however I was able to capture the crash log. This scene crashes Blender every time I open it with the latest nightly. The current release has no issue opening it. The crash log [v004_2700_autosave.crash.txt](https://archive.blender.org/developer/F13561004/v004_2700_autosave.crash.txt)
Author
Member

Added subscriber: @kursadk

Added subscriber: @kursadk
kursad k changed title from Opening a certain scene crashes Blender to Opening a certain scene crashes Blender 3.4.0 nightly 2022-09-23 19:55:02 +02:00

Added subscribers: @JacquesLucke, @deadpin

Added subscribers: @JacquesLucke, @deadpin

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

The crash looks real and is inside geometry nodes.

@kursadk Is it possible to narrow things down since we will need to be able to reproduce the problem while fixing this. E.g. if you replace your production meshes with just cubes and production images with small, single-color, images will that still reproduce the problem?

CC @JacquesLucke in case he has further ideas as the crash happens below:

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION

blender.exe         :0x00007FF773DEED00  tbb::interface6::internal::ets_base<1>::table_lookup
blender.exe         :0x00007FF774E7C910  blender::nodes::geo_eval_log::GeoModifierLog::get_local_tree_logger
blender.exe         :0x00007FF774E6BE10  blender::nodes::LazyFunctionForViewerNode::execute_impl
blender.exe         :0x00007FF779429150  blender::fn::lazy_function::Executor::run_node_task
blender.exe         :0x00007FF779429340  blender::fn::lazy_function::Executor::run_task
The crash looks real and is inside geometry nodes. @kursadk Is it possible to narrow things down since we will need to be able to reproduce the problem while fixing this. E.g. if you replace your production meshes with just cubes and production images with small, single-color, images will that still reproduce the problem? CC @JacquesLucke in case he has further ideas as the crash happens below: ``` ExceptionCode : EXCEPTION_ACCESS_VIOLATION blender.exe :0x00007FF773DEED00 tbb::interface6::internal::ets_base<1>::table_lookup blender.exe :0x00007FF774E7C910 blender::nodes::geo_eval_log::GeoModifierLog::get_local_tree_logger blender.exe :0x00007FF774E6BE10 blender::nodes::LazyFunctionForViewerNode::execute_impl blender.exe :0x00007FF779429150 blender::fn::lazy_function::Executor::run_node_task blender.exe :0x00007FF779429340 blender::fn::lazy_function::Executor::run_task ```

This issue was referenced by e746999aa9

This issue was referenced by e746999aa937f6de638a339d52e1f2e494014919
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Jacques Lucke self-assigned this 2022-09-25 23:07:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101309
No description provided.