Fix T101309: crash when executing geometry nodes without logger